git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3541 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -58,7 +58,7 @@ var gain;
 function getSampleRate() {
     alert("1 getSampleRate()");
 
-    context = new webkitAudioContext();
+    // context = new webkitAudioContext();
 
     alert("2 getSampleRate()");
 
