git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3545 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -66,9 +66,9 @@ function getSampleRate() {
 
     alert("3 getSampleRate()");
 
-    var s = "context.sampleRate = " + context.sampleRate;
-
-    alert("4 getSampleRate()");
+    // var s = "context.sampleRate = " + context.sampleRate;
+    // 
+    // alert("4 getSampleRate()");
 
     // var e = document.getElementById("sample-rate");
     // 
