git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3548 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -71,11 +71,11 @@ function getSampleRate() {
 
     alert("4 getSampleRate()");
 
-    // source.connect(context.destination);
-    // 
-    // alert("5 getSampleRate()");
-    // 
-    // source.noteOn(0);
+    source.connect(context.destination);
+    
+    alert("5 getSampleRate()");
+    
+    source.noteOn(0);
 
 
     // var s = "context.sampleRate = " + context.sampleRate;
