git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3549 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -75,7 +75,7 @@ function getSampleRate() {
     
     alert("5 getSampleRate()");
     
-    source.noteOn(0);
+    // source.noteOn(0);
 
 
     // var s = "context.sampleRate = " + context.sampleRate;
