git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3550 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -78,9 +78,9 @@ function getSampleRate() {
     // source.noteOn(0);
 
 
-    // var s = "context.sampleRate = " + context.sampleRate;
-    // 
-    // alert("4 getSampleRate()");
+    var s = "context.sampleRate = " + context.sampleRate;
+    
+    alert("6 getSampleRate()");
 
     // var e = document.getElementById("sample-rate");
     // 
