git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3551 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -78,7 +78,7 @@ function getSampleRate() {
     // source.noteOn(0);
 
 
-    var s = "context.sampleRate = " + context.sampleRate;
+    // var s = "context.sampleRate = " + context.sampleRate;
     
     alert("6 getSampleRate()");
 
