git-svn-id: http://chromium.googlecode.com/svn/trunk/samples/audio@3555 642247e6-a953-0410-9eba-834bae0c6d03

--- a/samplerate.html
+++ b/samplerate.html
@@ -76,8 +76,9 @@ function getSampleRate() {
 
     alert("6 getSampleRate()");
 
-    // var s = "context.sampleRate = " + context.sampleRate;
-    
+    var s = "context.sampleRate = " + context.sampleRate;
+
+    alert(s);
 
     // var e = document.getElementById("sample-rate");
     // 
