Stop using the webkit prefix

--- a/convolution-effects2.html
+++ b/convolution-effects2.html
@@ -355,7 +355,7 @@ function initPresets() {
 }
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     convolver = context.createConvolver();
     source = context.createBufferSource();
