--- a/dj.html
+++ b/dj.html
@@ -318,7 +318,7 @@ function draw() {
 
 function init() {
     // Initialize audio
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
 
     // Create post-compressor gain node.
