--- a/frequency-response.html
+++ b/frequency-response.html
@@ -195,7 +195,7 @@ function resonanceHandler(event, ui) {
 
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     filter = context.createBiquadFilter();
     filter.Q.value = 5;
     filter.frequency.value = 2000;
