--- a/latency.html
+++ b/latency.html
@@ -104,7 +104,7 @@ function loadHihat(url) {
 }
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     // context.createMediaStreamDestination();
 
