--- a/oscillator-fm2.html
+++ b/oscillator-fm2.html
@@ -309,7 +309,7 @@ function createSynthNote() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     // 
     analyser = context.createAnalyser();
