--- a/oscillator.html
+++ b/oscillator.html
@@ -253,7 +253,7 @@ function createRandomPitchSource() {
 
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     // 
     analyser = context.createAnalyser();
