--- a/simple-mixing.html
+++ b/simple-mixing.html
@@ -146,7 +146,7 @@ function addSliders() {
 }
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     source1 = context.createBufferSource();
     source2 = context.createBufferSource();
