--- a/tone-editor.html
+++ b/tone-editor.html
@@ -77,7 +77,7 @@ window.onload = function() {
 }
 
 function Source() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     var osc1 = context.createOscillator();
     var osc2 = context.createOscillator();
