--- a/MediaElementAudioSourceNode.html
+++ b/MediaElementAudioSourceNode.html
@@ -8,7 +8,7 @@
             var context;
 
             function init() {
-                context = new webkitAudioContext();
+                context = new AudioContext();
 
                 var audioTag = document.getElementById("human-voice");
                 var source = context.createMediaElementSource(audioTag);
