--- a/convolution-effects.html
+++ b/convolution-effects.html
@@ -351,7 +351,7 @@ function initPresets() {
 }
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     convolver = context.createConvolver();
     source = context.createBufferSource();
