--- a/doppler.html
+++ b/doppler.html
@@ -347,7 +347,7 @@ function addSliders() {
  * Start doppler demo
  */
  function init() {
-     context = new webkitAudioContext();
+     context = new AudioContext();
      
      source = context.createBufferSource();
 
