--- a/granular.html
+++ b/granular.html
@@ -186,7 +186,7 @@ function scheduleGrain() {
     y *= distance;
     z *= distance * scaleXZ;
 
-    panner.panningModel = webkitAudioPannerNode.HRTF;
+    panner.panningModel = AudioPannerNode.HRTF;
     panner.setPosition(x, y, z);
 
     var dryGainNode = context.createGainNode();
@@ -241,7 +241,7 @@ function schedule() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     // This check is a hack and will only be needed temporarily.
     // The reason is that the noteGrainOn() method used to (in older builds) apply a hard-coded amplitude window.
