--- a/javascript-processing.html
+++ b/javascript-processing.html
@@ -155,7 +155,7 @@ function draw() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     source = context.createBufferSource();
 
     // This AudioNode will do the amplitude modulation effect directly in JavaScript
