--- a/javascript-processing2.html
+++ b/javascript-processing2.html
@@ -135,7 +135,7 @@ function draw() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     source = context.createBufferSource();
 
     // This AudioNode will do the amplitude modulation effect directly in JavaScript
