--- a/latency-test.html
+++ b/latency-test.html
@@ -114,7 +114,7 @@ function init() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     alert("context.sampleRate = " + context.sampleRate );
 
     loadHihat("sounds/drum-samples/Kit8/snare.wav");
