--- a/loop.html
+++ b/loop.html
@@ -380,7 +380,7 @@ function bufferLoaderFinished(buffers) {
 }
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     delay = context.createDelay(10);
     gain = context.createGain();
     delay.connect(gain);
