--- a/mag-phase.html
+++ b/mag-phase.html
@@ -270,7 +270,7 @@
       
       function init () {
         // Setup biquad and other audio stuff
-        context = new webkitAudioContext();
+        context = new AudioContext();
         filter = context.createBiquadFilter();
         filter.type = 2; // Bandpass
         filter.frequency.value = normalizedCutoffToHz(cutoff, cutoffOctaves); // cutoff
