--- a/o3d-webgl-samples/pool.html
+++ b/o3d-webgl-samples/pool.html
@@ -1234,7 +1234,7 @@ function initClient() {
 
 function initAudio() {
     // Audio init
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     // Create compressor to sweeten overall mix
     if (context.createDynamicsCompressor) {
