--- a/oscillator-fm.html
+++ b/oscillator-fm.html
@@ -160,7 +160,7 @@ function createUnitySource() {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     osc1 = context.createOscillator();
     osc2 = context.createOscillator();
