--- a/panning.html
+++ b/panning.html
@@ -89,7 +89,7 @@ function loadAudioBuffer(url) {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     source = context.createBufferSource();
     panner = context.createPanner();
