--- a/shiny-drum-machine.html
+++ b/shiny-drum-machine.html
@@ -426,7 +426,7 @@ function init() {
         
     startLoadingAssets();
 
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     var finalMixNode;
     if (context.createDynamicsCompressor) {
@@ -581,7 +581,7 @@ function playNote(buffer, pan, x, y, z, sendGain, mainGain, playbackRate, noteTi
     var finalNode;
     if (pan) {
         var panner = context.createPanner();
-        panner.panningModel = webkitAudioPannerNode.HRTF;
+        panner.panningModel = AudioPannerNode.HRTF;
         panner.setPosition(x, y, z);
         voice.connect(panner);
         finalNode = panner;
