--- a/test-waveshaper.html
+++ b/test-waveshaper.html
@@ -152,7 +152,7 @@ function init() {
     addSlider("headroom");
     configureSlider("headroom", 0, -20, 40, headroomHandler);
     
-    context = new webkitAudioContext();
+    context = new AudioContext();
     source = context.createBufferSource();
     buffer = createToneBuffer();
     curve = new Float32Array(65536);
