--- a/tone.html
+++ b/tone.html
@@ -52,7 +52,7 @@ var duration = 2.0;
 var sampleRate = 44100.0;
 
 function init() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
 
     var numberOfFrames = duration * sampleRate;
     buffer = context.createBuffer(1, numberOfFrames, sampleRate);
