--- a/visualizer-chorus.html
+++ b/visualizer-chorus.html
@@ -112,7 +112,7 @@ function loadAudioBuffer(url) {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     source = context.createBufferSource();
     analyser = context.createAnalyser();
