--- a/visualizer-live.html
+++ b/visualizer-live.html
@@ -110,7 +110,7 @@ function init() {
 }
 
 function initAudio(stream) {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     analyser = context.createAnalyser();
     analyser.fftSize = 2048;
