--- a/visualizer2-gl.html
+++ b/visualizer2-gl.html
@@ -111,7 +111,7 @@ function loadAudioBuffer(url) {
 }
 
 function initAudio() {
-    context = new webkitAudioContext();
+    context = new AudioContext();
     
     source = context.createBufferSource();
     analyser = context.createAnalyser();
